[gd_scene load_steps=4 format=2]

[ext_resource path="res://Enemies/Stats.tscn" type="PackedScene" id=1]
[ext_resource path="res://Player/PlayerStats.gd" type="Script" id=2]
[ext_resource path="res://Assets/Fonts/Pixeled_5.tres" type="DynamicFont" id=3]

[node name="PlayerStats" instance=ExtResource( 1 )]
script = ExtResource( 2 )
max_health = 3

[node name="DeathUI" type="CanvasLayer" parent="." index="0"]

[node name="PanelContainer" type="PanelContainer" parent="DeathUI" index="0"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -48.5
margin_top = -26.0
margin_right = 48.5
margin_bottom = 26.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="DeathUI/PanelContainer" index="0"]
margin_left = 7.0
margin_top = 7.0
margin_right = 90.0
margin_bottom = 45.0

[node name="VBoxContainer" type="VBoxContainer" parent="DeathUI/PanelContainer/MarginContainer" index="0"]
margin_right = 83.0
margin_bottom = 38.0

[node name="Label" type="Label" parent="DeathUI/PanelContainer/MarginContainer/VBoxContainer" index="0"]
margin_right = 83.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 3 )
text = "Game Over"

[node name="Button" type="Button" parent="DeathUI/PanelContainer/MarginContainer/VBoxContainer" index="1"]
margin_top = 18.0
margin_right = 83.0
margin_bottom = 38.0
custom_fonts/font = ExtResource( 3 )
text = "Main Menu"
[connection signal="no_health" from="." to="." method="_on_PlayerStats_no_health"]
[connection signal="pressed" from="DeathUI/PanelContainer/MarginContainer/VBoxContainer/Button" to="." method="_on_Button_pressed"]
